# sonic-frameworks-quick-ui

./: CMakeLists.txt  README.md
autotests/: CMakeLists.txt  tst_badge.qml  tst_columnview.qml  tst_formlayout.qml
autotests/pagepool/: tst_pagepool.qml
poqm/ar/: libkirigami6_qt.po
poqm/ast/: libkirigami6_qt.po
poqm/az/: libkirigami6_qt.po
poqm/bg/: libkirigami6_qt.po
poqm/ca/: libkirigami6_qt.po
poqm/ca@valencia/: libkirigami6_qt.po
poqm/cs/: libkirigami6_qt.po
poqm/da/: libkirigami6_qt.po
poqm/de/: libkirigami6_qt.po
poqm/el/: libkirigami6_qt.po
poqm/en_GB/: libkirigami6_qt.po
poqm/eo/: libkirigami6_qt.po
poqm/es/: libkirigami6_qt.po
poqm/et/: libkirigami6_qt.po
poqm/eu/: libkirigami6_qt.po
poqm/fi/: libkirigami6_qt.po
poqm/fr/: libkirigami6_qt.po
poqm/ga/: libkirigami6_qt.po
poqm/gl/: libkirigami6_qt.po
poqm/he/: libkirigami6_qt.po
poqm/hi/: libkirigami6_qt.po
poqm/hu/: libkirigami6_qt.po
poqm/ia/: libkirigami6_qt.po
poqm/id/: libkirigami6_qt.po
poqm/is/: libkirigami6_qt.po
poqm/it/: libkirigami6_qt.po
poqm/ja/: libkirigami6_qt.po
poqm/ka/: libkirigami6_qt.po
poqm/ko/: libkirigami6_qt.po
poqm/lt/: libkirigami6_qt.po
poqm/lv/: libkirigami6_qt.po
poqm/ml/: libkirigami6_qt.po
poqm/nb/: libkirigami6_qt.po
poqm/nl/: libkirigami6_qt.po
poqm/nn/: libkirigami6_qt.po
poqm/pa/: libkirigami6_qt.po
poqm/pl/: libkirigami6_qt.po
poqm/pt/: libkirigami6_qt.po
poqm/pt_BR/: libkirigami6_qt.po
poqm/ro/: libkirigami6_qt.po
poqm/ru/: libkirigami6_qt.po
poqm/sa/: libkirigami6_qt.po
poqm/sk/: libkirigami6_qt.po
poqm/sl/: libkirigami6_qt.po
poqm/sr/: libkirigami6_qt.po
poqm/sr@ijekavian/: libkirigami6_qt.po
poqm/sr@ijekavianlatin/: libkirigami6_qt.po
poqm/sr@latin/: libkirigami6_qt.po
poqm/sv/: libkirigami6_qt.po
poqm/ta/: libkirigami6_qt.po
poqm/tg/: libkirigami6_qt.po
poqm/tr/: libkirigami6_qt.po
poqm/uk/: libkirigami6_qt.po
poqm/zh_CN/: libkirigami6_qt.po
poqm/zh_TW/: libkirigami6_qt.po
src/: CMakeLists.txt  imagecolors.cpp  imagecolors.h  kirigamiplugin.cpp
src/controls/: AboutItem.qml  Action.qml  Badge.qml  CMakeLists.txt  ContextualHelpButton.qml  PageRow.qml  kirigamicontrolsplugin.cpp
src/controls/private/globaltoolbar/: PageRowGlobalToolBarStyleGroup.qml  ToolBarPageHeader.qml
src/delegates/: CMakeLists.txt
src/dialogs/: CMakeLists.txt  SearchDialog.qml
src/forms/: CMakeLists.txt  kirigamiformsplugin.cpp  kirigamiformsplugin.h
src/forms/cards/: FormAction.qml  FormEntry.qml  FormGroup.qml  FormSeparator.qml
src/forms/flat/: Form.qml  FormAction.qml  FormEntry.qml  FormGroup.qml  FormSeparator.qml
src/forms/templates/: Form.qml  FormAction.qml  FormEntry.qml  FormGroup.qml  FormSeparator.qml
src/layouts/: CMakeLists.txt  columnview.cpp  columnview_p.h  formlayoutattached.cpp  toolbarlayout.cpp  toolbarlayoutdelegate.cpp
src/primitives/: CMakeLists.txt  icon.cpp
src/primitives/scenegraph/: iconmaterial.cpp  iconmaterial.h  iconnode.cpp  iconnode.h  shadermaterial.cpp  shadermaterial.h
src/primitives/shaders/: icon.frag  icon.vert
src/templates/: Badge.qml  CMakeLists.txt
templates/kirigami6/: CMakeLists.txt  kirigami.kdevtemplate
templates/kirigami6/android/: build.gradle
tests/: declarativePageRow.qml
